<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backinner"
    android:orientation="vertical" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/EnterName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Name"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/EnterEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/EnterMobile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Mobile"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
             <AutoCompleteTextView
                android:id="@+id/EnterAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
              <AutoCompleteTextView
                android:id="@+id/EnterCountry"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Country"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                   <AutoCompleteTextView
                android:id="@+id/EnterState"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="State"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                                 <AutoCompleteTextView
                android:id="@+id/EnterCity"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="City"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                                                     <AutoCompleteTextView
                android:id="@+id/EnterZipcode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="PinCode"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/access_code"
                android:visibility="gone" />

            <EditText
                android:id="@+id/accessCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="4YRUXLSRO20O8NIH"
                android:visibility="gone" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/merchant_id"
                android:visibility="gone" />

            <EditText
                android:id="@+id/merchantId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="2"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="Order Id"
                android:visibility="gone" />

            <EditText
                android:id="@+id/orderId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/currency"
                android:visibility="gone" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="INR"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/amount"
                android:visibility="gone" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1.00"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/redirect_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/redirectUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/cancel_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/cancelUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://122.182.6.216/merchant/ccavResponseHandler.jsp"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/rsa_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/rsaUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://122.182.6.216/merchant/GetRSA.jsp"
                android:visibility="gone" />

            <Button
                android:id="@+id/nextButton"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/loginblue"
                android:onClick="onClick"
                android:text="@string/pay_button"
                android:textColor="#FFFFFF"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>