<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
       android:background="@drawable/backinner" 
    tools:context="com.gbrf.CheckoutActivity" >

    <ProgressBar
        android:id="@+id/logout_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
               android:layout_gravity="center_vertical|center_horizontal"
        android:layout_marginBottom="8dp"
         android:layout_centerInParent="true"
        android:visibility="gone" />
     <ScrollView
        android:id="@+id/registration_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical" >
            <AutoCompleteTextView
                android:id="@+id/EnterName"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Name"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/EnterEmail"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Email"
                android:visibility="gone"
                android:inputType="textEmailAddress"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <AutoCompleteTextView
                android:id="@+id/EnterMobile"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Mobile"
                android:visibility="gone"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
             <AutoCompleteTextView
                android:id="@+id/EnterAddress"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Address"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
              <AutoCompleteTextView
                android:id="@+id/EnterCountry"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="Country"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                   <AutoCompleteTextView
                android:id="@+id/EnterState"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="State"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:visibility="gone"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                                 <AutoCompleteTextView
                android:id="@+id/EnterCity"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="City"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />
                                                     <AutoCompleteTextView
                android:id="@+id/EnterZipcode"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_bg"
                android:ems="10"
                android:hint="PinCode"
                android:visibility="gone"
                android:inputType="textPersonName"
                android:paddingLeft="10dp"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/access_code"
                android:visibility="gone" />

            <EditText
                android:id="@+id/accessCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="AVVN66DH70CC73NVCC"
                android:visibility="gone" >

                <requestFocus />
            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/merchant_id"
                android:visibility="gone" />

            <EditText
                android:id="@+id/merchantId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="70287"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="Order Id"
                android:visibility="gone" />

          <!--   <EditText
                android:id="@+id/orderId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="gone" /> -->

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/currency"
                android:visibility="gone" />

            <EditText
                android:id="@+id/currency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/amount"
                android:visibility="gone" />

            <EditText
                android:id="@+id/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:text="1.00"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/redirect_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/redirectUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://theacademicworld.com/order/response?device=android"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/cancel_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/cancelUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://theacademicworld.com/order/response?device=android"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/rsa_url"
                android:visibility="gone" />

            <EditText
                android:id="@+id/rsaUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textUri"
                android:text="http://theacademicworld.com/api/rest/order/get-rsa-key"
                android:visibility="gone" />
            
                    <ImageView
                    android:id="@+id/product_detail_img"
                    android:layout_width="200dp"
                    android:layout_height="250dp"
                        android:layout_gravity="center_vertical|center_horizontal"
                      />
              <RelativeLayout
                      android:id="@+id/relative_layout_book"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical" >
                    <TextView
                    android:id="@+id/booklabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="Book Name: "
                    android:textColor="#FFFFFF"
                    android:textSize="19dp" />
                  <TextView
                    android:id="@+id/bookinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/booklabel"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp" />
                    </RelativeLayout>
                                  <RelativeLayout
                android:id="@+id/relative_layout_price"
            android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_below="@+id/relative_layout_book">
                 
                      <TextView
                    android:id="@+id/pricelabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp" />

                <TextView
                    android:id="@+id/priceinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/pricelabel"
                    android:textColor="#FFFFFF"
                    android:textSize="19dp" />
                </RelativeLayout>
                   <Button
                    android:id="@+id/checkout"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                android:layout_marginTop="20dp"
                    android:background="@drawable/loginblue2"
                    android:text="Checkout"
                    android:textColor="#FFFFFF"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>
            </ScrollView>

</RelativeLayout>
